--- a/motorsports.html
+++ b/motorsports.html
@@ -98,12 +98,32 @@
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/indycar">Indycar Series</a></td>
-<td>February 27, 2026 10:35 AM</td>
+<td>February 28, 2026 6:35 AM</td>
 <td><span class="countdown-timer" data-end="February 27, 2026 22:35:00" data-start="February 27, 2026 10:35:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series</a></td>
-<td>February 27, 2026 1:00 PM</td>
+<td><a href="https://roxiestreams.info/nascar">NASCAR Craftsman Truck Series - Race</a></td>
+<td>February 28, 2026 9:00 AM</td>
+<td><span class="countdown-timer" data-end="February 27, 2026 13:00:00" data-start="February 27, 2026 01:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Daytona - Qualifying</a></td>
+<td>February 28, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="February 27, 2026 13:00:00" data-start="February 27, 2026 01:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/nascar">NASCAR O'Reilly Auto Part Series - Race</a></td>
+<td>February 28, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="February 27, 2026 13:00:00" data-start="February 27, 2026 01:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Daytona - Heats & Race</a></td>
+<td>February 28, 2026 4:06 PM</td>
+<td><span class="countdown-timer" data-end="February 27, 2026 13:00:00" data-start="February 27, 2026 01:00:00"></span>
+</td>
+<tr>
+<td><a href="https://roxiestreams.info/motogp">Moto3/2/GP Grand Prix - Thailand</a></td>
+<td>February 28, 2026 12:00 AM</td>
 <td><span class="countdown-timer" data-end="February 27, 2026 13:00:00" data-start="February 27, 2026 01:00:00"></span>
 </td>
 <tr>
