--- a/nba.html
+++ b/nba.html
@@ -143,70 +143,70 @@
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-1">
-         Cleveland Cavaliers vs Detroit Pistons
+         Portland Trail Blazers vs Charlotte Hornets
         </a>
        </td>
        <td>
-        February 27, 2026 4:00 PM
+        February 28, 2026 10:00 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 28, 2026 4:00 PM:00" data-start="February 27, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="March 01, 2026 10:00 AM:00" data-start="February 28, 2026 10:00 AM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-2">
-         Brooklyn Nets vs Boston Celtics
+         Houston Rockets vs Miami Heat
         </a>
        </td>
        <td>
-        February 27, 2026 4:30 PM
+        February 28, 2026 12:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 28, 2026 4:30 PM:00" data-start="February 27, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="March 01, 2026 12:30 PM:00" data-start="February 28, 2026 12:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-3">
-         New York Knicks vs Milwaukee Bucks
+         Toronto Raptors vs Washington Wizards
         </a>
        </td>
        <td>
-        February 27, 2026 5:00 PM
+        February 28, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 28, 2026 5:00 PM:00" data-start="February 27, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="March 01, 2026 4:00 PM:00" data-start="February 28, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-4">
-         Memphis Grizzlies vs Dallas Mavericks
+         Los Angeles Lakers vs Golden State Warriors
         </a>
        </td>
        <td>
-        February 27, 2026 5:30 PM
+        February 28, 2026 5:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 28, 2026 5:30 PM:00" data-start="February 27, 2026 5:30 PM:00">
+        <span class="countdown-timer" data-end="March 01, 2026 5:30 PM:00" data-start="February 28, 2026 5:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.info/nba-streams-5">
-         Denver Nuggets vs Oklahoma City Thunder
+         New Orleans Pelicans vs Utah Jazz
         </a>
        </td>
        <td>
-        February 27, 2026 6:30 PM
+        February 28, 2026 6:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="February 28, 2026 6:30 PM:00" data-start="February 27, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="March 01, 2026 6:30 PM:00" data-start="February 28, 2026 6:30 PM:00">
         </span>
        </td>
       </tr>
