--- a/nhl.html
+++ b/nhl.html
@@ -97,27 +97,72 @@
 <tbody>
         <tr>
         <tr style="background-color: #333; color: white;">
-            <td colspan="3"><strong>Friday, February 27, 2026</strong></td>
+            <td colspan="3"><strong>Saturday, February 28, 2026</strong></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-1">Buffalo Sabres vs Florida Panthers</a></td>
-            <td>February 27, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-28 16:00:00" data-start="2026-02-27 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-1">Pittsburgh Penguins vs New York Rangers</a></td>
+            <td>February 28, 2026 09:30 AM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 09:30:00" data-start="2026-02-28 09:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-2">Vegas Golden Knights vs Washington Capitals</a></td>
-            <td>February 27, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-28 16:00:00" data-start="2026-02-27 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-2">Boston Bruins vs Philadelphia Flyers</a></td>
+            <td>February 28, 2026 12:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 12:00:00" data-start="2026-02-28 12:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-3">Minnesota Wild vs Utah Mammoth</a></td>
-            <td>February 27, 2026 06:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-28 18:00:00" data-start="2026-02-27 18:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-3">Edmonton Oilers vs San Jose Sharks</a></td>
+            <td>February 28, 2026 01:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 13:00:00" data-start="2026-02-28 13:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.info/nhl-streams-4">Winnipeg Jets vs Anaheim Ducks</a></td>
-            <td>February 27, 2026 07:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-02-28 19:00:00" data-start="2026-02-27 19:00:00"></span></td>
+            <td><a href="https://roxiestreams.info/nhl-streams-4">New Jersey Devils vs St. Louis Blues</a></td>
+            <td>February 28, 2026 02:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 14:00:00" data-start="2026-02-28 14:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-5">New York Islanders vs Columbus Blue Jackets</a></td>
+            <td>February 28, 2026 03:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 15:00:00" data-start="2026-02-28 15:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-6">Chicago Blackhawks vs Colorado Avalanche</a></td>
+            <td>February 28, 2026 03:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 15:00:00" data-start="2026-02-28 15:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-7">Ottawa Senators vs Toronto Maple Leafs</a></td>
+            <td>February 28, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 16:00:00" data-start="2026-02-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-8">Washington Capitals vs Montreal Canadiens</a></td>
+            <td>February 28, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 16:00:00" data-start="2026-02-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-9">Buffalo Sabres vs Tampa Bay Lightning</a></td>
+            <td>February 28, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 16:00:00" data-start="2026-02-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-10">Detroit Red Wings vs Carolina Hurricanes</a></td>
+            <td>February 28, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 16:00:00" data-start="2026-02-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-11">Calgary Flames vs Los Angeles Kings</a></td>
+            <td>February 28, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 16:00:00" data-start="2026-02-28 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-12">Nashville Predators vs Dallas Stars</a></td>
+            <td>February 28, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 17:00:00" data-start="2026-02-28 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.info/nhl-streams-13">Vancouver Canucks vs Seattle Kraken</a></td>
+            <td>February 28, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-03-01 19:00:00" data-start="2026-02-28 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
