--- a/soccer.html
+++ b/soccer.html
@@ -98,49 +98,134 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-2">Augsburg vs Köln</a></td>
-<td>February 27, 2026 11:30 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 11:30:00 AM" data-start="February 27, 2026 11:30:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-1">Bournemouth vs Sunderland</a></td>
+<td>February 28, 2026 4:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 04:30:00 AM" data-start="February 28, 2026 04:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-3">Strasbourg vs Lens</a></td>
-<td>February 27, 2026 11:45 AM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 11:45:00 AM" data-start="February 27, 2026 11:45:00 AM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-2">Portsmouth vs Hull City</a></td>
+<td>February 28, 2026 4:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 04:30:00 AM" data-start="February 28, 2026 04:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-4">Wolves vs Aston Villa</a></td>
-<td>February 27, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Leicester City vs Norwich City</a></td>
+<td>February 28, 2026 4:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 04:30:00 AM" data-start="February 28, 2026 04:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-5">Levante vs Deportivo Alavés</a></td>
-<td>February 27, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Rayo Vallecano vs Athletic Club</a></td>
+<td>February 28, 2026 5:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 05:00:00 AM" data-start="February 28, 2026 05:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-6">Bristol City vs Watford</a></td>
-<td>February 27, 2026 12:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-5">Bayer Leverkusen vs Mainz 05</a></td>
+<td>February 28, 2026 6:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 06:30:00 AM" data-start="February 28, 2026 06:30:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-7">Mazatlán vs Pachuca</a></td>
-<td>February 27, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-6">Burnley vs Brentford</a></td>
+<td>February 28, 2026 7:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 07:00:00 AM" data-start="February 28, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Querétaro vs Santos Laguna</a></td>
-<td>February 27, 2026 5:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-7">Liverpool vs West Ham</a></td>
+<td>February 28, 2026 7:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 07:00:00 AM" data-start="February 28, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-9">Juárez vs Atlas</a></td>
-<td>February 27, 2026 7:00 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 07:00:00 PM" data-start="February 27, 2026 07:00:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-8">Newcastle United vs Everton</a></td>
+<td>February 28, 2026 7:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 07:00:00 AM" data-start="February 28, 2026 07:00:00 AM" span=""></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/soccer-streams-8">Tijuana vs Pumas UNAM</a></td>
-<td>February 27, 2026 7:06 PM</td>
-<td><span <="" class="countdown-timer" data-end="February 28, 2026 07:06:00 PM" data-start="February 27, 2026 07:06:00 PM" span=""></span></td>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Coventry City vs Stoke City</a></td>
+<td>February 28, 2026 7:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 07:00:00 AM" data-start="February 28, 2026 07:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Barcelona vs Villarreal</a></td>
+<td>February 28, 2026 7:15 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 07:15:00 AM" data-start="February 28, 2026 07:15:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Rennes vs Toulouse</a></td>
+<td>February 28, 2026 8:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 08:00:00 AM" data-start="February 28, 2026 08:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-10">Galatasaray vs Alanyaspor</a></td>
+<td>February 28, 2026 9:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 09:00:00 AM" data-start="February 28, 2026 09:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Verona vs Napoli</a></td>
+<td>February 28, 2026 9:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 09:00:00 AM" data-start="February 28, 2026 09:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-11">Dortmund vs Bayern München</a></td>
+<td>February 28, 2026 9:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 09:30:00 AM" data-start="February 28, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-12">Leeds United vs Man City</a></td>
+<td>February 28, 2026 9:30 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 09:30:00 AM" data-start="February 28, 2026 09:30:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Monaco vs Angers SCO</a></td>
+<td>February 28, 2026 10:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 10:00:00 AM" data-start="February 28, 2026 10:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-13">Al Nassr vs Al-Fayha</a></td>
+<td>February 28, 2026 11:00 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 11:00:00 AM" data-start="February 28, 2026 11:00:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-3">Inter Milan vs Genoa</a></td>
+<td>February 28, 2026 11:45 AM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 11:45:00 AM" data-start="February 28, 2026 11:45:00 AM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-4">Real Oviedo vs Atlético Madrid</a></td>
+<td>February 28, 2026 12:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 12:00:00 PM" data-start="February 28, 2026 12:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-9">Le Havre vs PSG</a></td>
+<td>February 28, 2026 12:05 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 12:05:00 PM" data-start="February 28, 2026 12:05:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-14">Boca Juniors vs Gimnasia Mendoza</a></td>
+<td>February 28, 2026 12:45 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 12:45:00 PM" data-start="February 28, 2026 12:45:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-15">Cruzeiro vs Pouso Alegre</a></td>
+<td>February 28, 2026 13:30 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 01:30:00 PM" data-start="February 28, 2026 01:30:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-16">Toluca vs Chivas</a></td>
+<td>February 28, 2026 3:00 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 03:00:00 PM" data-start="February 28, 2026 03:00:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-16">Monterrey vs Cruz Azul</a></td>
+<td>February 28, 2026 5:05 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 05:05:00 PM" data-start="February 28, 2026 05:05:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-17">León vs Necaxa</a></td>
+<td>February 28, 2026 5:06 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 05:06:00 PM" data-start="February 28, 2026 05:06:00 PM" span=""></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/soccer-streams-16">América vs Tigres UANl</a></td>
+<td>February 28, 2026 7:10 PM</td>
+<td><span <="" class="countdown-timer" data-end="March 01, 2026 07:10:00 PM" data-start="February 28, 2026 07:10:00 PM" span=""></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
