--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,21 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
-<td>February 27, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 27, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.info/ppv-streams-1">EAST VS WEST XXII</a></td>
+<td>February 28, 2026 10:50 AM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 10:50:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Moreno vs Kavanagh</a></td>
+<td>February 28, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 14:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE Elimination Chamber</a></td>
+<td>February 28, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 16:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/ppv-streams-2">Navarrete vs. Nunez (MATCHROOM)</a></td>
+<td>February 28, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 17:00:00"></span></td>
 </tr>
 </tbody>
 </table>
