--- a/mlb.html
+++ b/mlb.html
@@ -142,12 +142,15 @@
      <tbody>
       <td>
        <td>
+        <span class="countdown-timer" data-end="February 28, 2026 22:05:00" data-start="February 28, 2026 10:05:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
         <a href="https://roxiestreams.info/mlb-streams-1">
          Minnesota Twins vs Boston Red Sox
         </a>
-       </td>
-       <td>
-        February 28, 2026 10:05 AM
        </td>
        <td>
         <span class="countdown-timer" data-end="February 28, 2026 22:05:00" data-start="February 28, 2026 10:05:00">
@@ -217,16 +220,17 @@
         </a>
        </td>
        <td>
-        February 28, 2026 12:05 PM
+        <span class="countdown-timer" data-end="February 28, 2026 22:10:00" data-start="February 28, 2026 10:10:00">
+        </span>
        </td>
+      </tr>
+      <tr>
        <td>
         <a href="https://roxiestreams.info/mlb-streams-7">
          Kansas City Royals vs Colorado Rockies
         </a>
        </td>
        <td>
-        February 28, 2026 12:10 PM
-       </td>
       </tr>
      </tbody>
     </table>
