--- a/mlb.html
+++ b/mlb.html
@@ -129,10 +129,10 @@
             Toronto Blue Jays vs New York Yankees
           </a>
         </td>
-        <td>February 28, 2026 10:05 AM</td>
+        <td>February 28, 2026 10:07 AM</td>
         <td>
           <span class="countdown-timer"
-                data-start="February 28, 2026 10:05:00"
+                data-start="February 28, 2026 10:07:00"
                 data-end="February 28, 2026 22:05:00"></span>
         </td>
       </tr>
@@ -143,10 +143,10 @@
             Philadelphia Phillies vs Toronto Blue Jays
           </a>
         </td>
-        <td>February 28, 2026 10:07 AM</td>
+        <td>February 28, 2026 10:10 AM</td>
         <td>
           <span class="countdown-timer"
-                data-start="February 28, 2026 10:07:00"
+                data-start="February 28, 2026 10:10:00"
                 data-end="February 28, 2026 22:07:00"></span>
         </td>
       </tr>
@@ -171,10 +171,10 @@
             Chicago Cubs vs Los Angeles Dodgers
           </a>
         </td>
-        <td>February 28, 2026 10:10 AM</td>
+        <td>February 28, 2026 12:05 PM</td>
         <td>
           <span class="countdown-timer"
-                data-start="February 28, 2026 10:10:00"
+                data-start="February 28, 2026 12:05:00"
                 data-end="February 28, 2026 22:10:00"></span>
         </td>
       </tr>
@@ -185,10 +185,10 @@
             Kansas City Royals vs Colorado Rockies
           </a>
         </td>
-        <td>February 28, 2026 10:10 AM</td>
+        <td>February 28, 2026 12:05 PM</td>
         <td>
           <span class="countdown-timer"
-                data-start="February 28, 2026 10:10:00"
+                data-start="February 28, 2026 12:05:00"
                 data-end="February 28, 2026 22:10:00"></span>
         </td>
       </tr>
