--- a/index.html
+++ b/index.html
@@ -220,22 +220,42 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-4">Premier League</a></td>
-<td>February 27, 2026 12:00 PM</td>
+<td>February 28, 2026 04:30 PM</td>
 <td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-5">Laliga</a></td>
-<td>February 27, 2026 12:00 PM</td>
+<td>February 28, 2026 05:00 AM</td>
 <td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/nba">NBA</a></td>
-<td>February 27, 2026 4:00 PM</td>
+<td><a href="https://roxiestreams.info/soccer-streams-11">DORTMUND VS BAYERN (Der Klassiker)</a></td>
+<td>February 28, 2026 09:30 AM</td>
+<td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/supercross">AMA Supercross Daytona</a></td>
+<td>February 28, 2026 10:00/4:06 PM</td>
+<td><span class="countdown-timer" data-end="February 28, 2026 12:00:00 PM" data-start="February 27, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/ppv-streams-1">EAST VS WEST XXII</a></td>
+<td>February 28, 2026 10:50 AM</td>
 <td><span class="countdown-timer" data-end="February 28, 2026 04:00:00 PM" data-start="February 27, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.info/wwe-streams">WWE Smackdown</a></td>
-<td>February 27, 2026 5:00 PM</td>
+<td><a href="https://roxiestreams.info/ufc">UFC Fight Night: Moreno vs Kavanagh</a></td>
+<td>February 28, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/wwe-streams">WWE Elimination Chamber</a></td>
+<td>February 28, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.info/motogp">MotoGP Grand Prix - Thailand</a></td>
+<td>February 29, 2026 12:00 AM</td>
 <td><span class="countdown-timer" data-end="February 28, 2026 05:00:00 PM" data-start="February 27, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
