--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ If you're having issues with streams, try refreshing the page or using an incogn
 <tbody>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-4">Premier League</a></td>
-<td>February 28, 2026 04:30 PM</td>
-<td><span class="countdown-timer" data-end="March 01, 2026 04:30:00 PM" data-start="February 28, 2026 04:30:00 PM"></span></td>
+<td>February 28, 2026 04:30 AM</td>
+<td><span class="countdown-timer" data-end="March 01, 2026 04:30:00 PM" data-start="February 28, 2026 04:30:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.info/soccer-streams-5">Laliga</a></td>
