--- a/ppv-streams-2.html
+++ b/ppv-streams-2.html
@@ -114,7 +114,7 @@
                 <div id="clapprContainer"></div>
                 <div id="twitchContainer">
                     <iframe id="twitchIframe" 
-                            src="https://player.twitch.tv/?channel=adapt&parent=roxiestreams.live&autoplay=true" 
+                            src="https://player.twitch.tv/?channel=adapt&parent=roxiestreams.info&autoplay=true" 
                             height="100%" 
                             width="100%" 
                             frameborder="0" 
