--- a/ppv-streams-1.html
+++ b/ppv-streams-1.html
@@ -124,7 +124,7 @@
             </div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('ppv.m3u8', '602'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('twitch')">Stream 2 (Twitch)</button>
+	  <button class="streambutton" onclick="showPlayer('twitch')">Stream 2</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.info"></iframe>
