--- a/ppv-streams-1.html
+++ b/ppv-streams-1.html
@@ -185,7 +185,7 @@ function showPlayer(playerType, streamUrl) {
     // Force stop Twitch iframe by changing src
     twitchIframe.src = '';
     setTimeout(() => {
-      twitchIframe.src = 'https://player.twitch.tv/?channel=nayagx&parent=roxiestreams.info&autoplay=true';
+      twitchIframe.src = 'https://player.twitch.tv/?channel=streamerartist97&parent=roxiestreams.info&autoplay=true';
     }, 100);
     
     // Destroy existing Clappr and create new one
