--- a/fighting.html
+++ b/fighting.html
@@ -114,6 +114,14 @@
 <td>February 28, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 17:00:00"></span></td>
 </tr>
+<td><a href="https://roxiestreams.info/ppv-streams-3">Pierce vs. Parra</a></td>
+<td>February 28, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 17:00:00"></span></td>
+</tr>
+<td><a href="https://roxiestreams.info/ppv-streams-4">RAF</a></td>
+<td>February 28, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="February 30, 2026 23:59:00" data-start="February 28, 2026 17:00:00"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
